# kitchen-butler

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  README.md  apache-vhost.conf  demo.sh  gpt-manifest.json  kb  main.txt  multiuser.txt  opencode.json.example  plan.md  pyproject.toml  tui.json
kb_app/: __main__.py  cli.py  config.py  db.py  gpt_api.py  mcp_server.py  models.py
kb_app/engine/: matcher.py  tools.py
kb_app/seed_data/: ingredients.json  recipes.json
tests/: test_tools.py
