[project]
name = "kitchen-brain"
version = "0.1.0"
description = "LLM-interfaced kitchen management app"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "sqlalchemy>=2.0",
    "anthropic>=0.30",
    "python-dotenv>=1.0",
]

[project.scripts]
kb = "kb_app.cli:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
