[project]
name = "kitchen-butler"
version = "0.1.0"
description = "Kitchen management app with MCP server for opencode integration"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "sqlalchemy>=2.0",
    "mcp>=1.0",
]

[project.scripts]
kb = "kb_app.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
